syntax = "proto3";
option go_package=".;pb";
import "enum.proto";


// 登录
message LoginReq {
    string password = 1;
    int32 from = 2;
    uint32 gateId = 3;
    uint32 uid = 4;
}

// 登录成功
message LoginRsp {
    int32 ret = 1;
    uint32 gameId = 2;
    uint32 roomId = 3;
    uint32 hallId = 4;
    string nick = 5;
    uint32 iconId = 6;
    bool isRegist = 7;
    uint32 uid = 8;
}

// 离开
message LogoutReq {
    uint32 uid = 1;
}

// 踢人
message GateKick {
    KickType type = 1;
}

// 心跳
message HeartBeat {
    uint32 serverType = 1;
    uint32 serverId = 2;
}

// 注册
message Regist {
    uint32 serverType = 1;
    uint32 serverId = 2;
}

// 推送
message GatePushMsg {
    string data = 1;
}

// 转发到消息
message PacketIn {
    uint32 svid = 1;
    uint32 cmd = 2;
    bytes payload = 3;
}

// 转发到消息
message PacketOut {
    uint32 uid = 1;
    uint32 cmd = 2;
    bytes payload = 3;
}

// 请求游戏列表
message GetGameListReq {
    uint32 uid = 1;
    uint32 gateId = 2;
    uint32 serverId = 3;
    repeated int32 gids = 4;        // 游戏id len=0全部数据 len>0游戏数据
}

// 房间信息
message GameInfo {
    uint32 gameId = 1;              // 游戏id
    GameStatus status = 2;          // 游戏状态
    uint32 startTime = 3;           // 开始时间
    uint32 endTime = 4;             // 结束时间
}

// 答复游戏列表
message GetGameListRsp {
    repeated GameInfo games = 1;
}

// 请求房间列表
message GetRoomListReq {
    uint32 uid = 1;
    uint32 gameId = 2;
    uint32 gateId = 3;
}

// 房间信息
message RoomInfo {
    uint32 serverId = 1;
    uint32 roomId = 2;
    uint32 tag = 3;          // 0正常房间 1热门房间 2推荐房间 3新的房间
    uint32 gameId = 4;       // 游戏id
    uint32 level = 5;        // 等级
    string info = 6;         // 房间描述
}

// 答复房间列表
message GetRoomListRsp {
    repeated RoomInfo rooms = 1;
}

// 请求进入房间
message EnterRoomReq {
    uint32 uid = 1;
    uint32 gateId = 2;
    uint32 gameId = 3;
    uint32 roomId = 4;
    uint32 multi = 5;
}

// 进房答复
message EnterRoomRsp {
    uint32 roomId = 1;
    repeated uint32 uids = 2;
}

// 进入老虎机
message EnterSlotsReq {
    uint32 gameId = 1;
    uint32 uid = 2;
    uint32 gateId = 3;
}

message SlotsElem {
    int32 elem_id = 1;      // 元素id
    string elem_name = 2;   // 元素名称
    int32 multi3 = 3;       // 3个元素倍数
    int32 multi4 = 4;       // 4个元素倍数
    int32 multi5 = 5;       // 5个元素倍数
}

message SlotsLine {
    int32 line_id = 1;
    repeated int32 line_pos = 2;
}

message EnterSlotsRsp {
    uint32 GameId = 1;
    repeated SlotsElem elems = 2;   // 元素
    repeated int32 bet = 3;         // 下注额
    repeated int32 level = 4;       // 下注等级
    repeated int32 line = 5;        // 下注线
    repeated SlotsLine lines = 6;   // 中奖线路
    uint32 uid = 7;
}


// 离开老虎机
message LeaveSlotsReq {
    uint32 uid = 1;
    int32 slotsId = 2;
}

// 老虎机摇奖
message SlotsSpinReq {
    uint32 uid = 1;
    uint32 gameId = 2;
    int32 bet = 3;      // 下注
    int32 level = 4;    // 级别
    int32 lines = 5;    // 线数
    int32 gateId = 6;
}

// Free
message SlotsFree {
    repeated int32 pos = 1;     // free图标位置
    int32 freeSpin = 2;         // 奖励免费摇奖次数
}

// Bonus
message SlotsBonus {
    repeated int32 pos = 1;    // bonus图标位置
    repeated int32 board = 2;  // 界面
    int64 win = 3;             // 中奖额度
    int64 money = 4;           // 金币
}

// 老虎机摇奖
message SlotsSpinRsp {
    int32 uid = 1;
    int32 gameId = 2;
    int64 money = 3;            // 金币
    int64 win = 4;              // 赢钱
    repeated int32 board = 5;   // 面板
    repeated int32 lines = 6;   // 中奖线路
    bool free = 7;              // 中免费游戏
    SlotsFree free_data = 8;    // free数据
    bool bonus = 9;
    SlotsBonus bonus_data = 10; // bonus数据
    int32 leftSpin = 11;        // 剩余免费摇奖次数
    int64 bet = 12;             // 下注
}

// 玩家离开房间
message LeaveRoomReq {
    uint32 gateId = 1;
    uint32 roomId = 2;
    uint32 uid = 3;
}

// 玩家离开房间
message LeaveRoomRsp {
    uint32 code = 1;
}

message GameStatusReq {
    uint32 uid = 1;
}

message GameStatusRsp {
    uint32 roomId = 1;
}

// 玩家离线
message Offline {
    uint32 uid = 1;
}

// 开始游戏
message StartGameReq {
    uint32 roomId = 1;          // 房间ID
    uint32 hallId = 2;          // 大厅ID
    int32 multi = 3;            // 倍数
    map<uint32,uint32> users = 4;// 所有玩家的uid
}

// 开始游戏
message StartGameRsp {
    uint32 roomId = 1;          // 房间ID
    uint32 hallId = 2;          // 大厅ID
    int32 multi = 3;            // 倍数
    map<uint32,int32> users = 4;// 所有玩家的uid
}

// 同步状态
message WaitDone {
    uint32 roomId = 1;
    uint32 cmd = 2;
    uint32 uid = 3;
}

// 同步数据
message SyncData {
    string data = 1;
    uint32 roomId = 2;
    uint32 gameId = 3;
}

// 麻将
message DeskMj {
    int32 index = 1;            // 下标
    uint32 uid = 2;             // 玩家uid
    int32 mj_val = 3;           // 麻将值
}

// 手牌
message MjFaPai {
    repeated DeskMj fapai = 1;      // 发牌
    DeskMj pizi = 2;                // 皮子
    repeated int32 touzi = 3;       // 骰子
    uint32 zhuang = 4;              // 庄家
    int32 laizi = 5;                // 赖子
    int32 can_op = 6;               // 可操作
}

// 完成数据
message Tap {
    uint32 uid = 1;         // uid
    uint32 roomId = 2;      // roomId
    int32 tap = 3;          // x坐标
    int32 can_op = 4;       // 可操作
}

// 执行操作
message MjOpt {
    uint32 uid = 1;         // uid
    uint32 roomId = 2;      // roomId
    int32 op = 3;           // 操作
    int32 mj = 4;           // 麻将
    int32 can_op = 5;       // 可操作
    
}

// 空数据
message Empty {
    
}

// 手牌数据
message playerInfo {
    uint32 uid = 1;
    bytes hands = 2;          // 手牌
    bytes dachu = 3;          // 打出牌
    repeated bytes cpgs = 4;  // 吃碰杠
    int32 can_op = 5;         // 可操作
}

// 重连数据
message DeskSnapshot {
    int32 pizi = 1;                 // 皮子
    repeated int32 touzi = 2;       // 骰子
    uint32 zhuang = 3;              // 庄家
    int32 laizi = 4;                // 赖子
    bytes usedMjIndex = 5;          // 牌堆中已经被抓走的牌
    repeated playerInfo info = 6;   // 各个玩家手中的牌
    uint32 roomId = 7;               // 房间ID
}

message GameOverUser{
    uint32 uid = 1;           // 玩家id
    int64 win = 2;            // 赢钱
    repeated int32 hands = 3; // 手牌
    int32 huType = 4;         // 胡类型
    
}

// 游戏结束
message GameOver {
    string data = 1;    // 游戏结束
    uint32 tempId = 2;   // 房间模板ID
    uint32 roomId = 3;   // 房间ID
    repeated GameOverUser users = 4; // 玩家
}

// 多播消息
message MultiBroadcast {
    repeated uint32 uids = 1;
    bytes data = 2;
}

// 重连
message Reconnect {
    uint32 uid = 1;
    uint32 tempId = 2;
    uint32 roomId = 3;
    uint32 hallId = 4;
    uint32 gateId = 5;
}

// 回合
message Turn {
    uint32 process = 1;
    int32 canOpt = 2;
}

// 测试
message Test {
    uint32 uid = 1;
    int64 startTime = 2;
    int64 endTime = 3;
}

// 通用回复
message CommonRsp {
    ErrorCode code = 1;
    string msg = 2;
}